--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-minimal
 title: Faze's portfolio
 description: A selection of my work since 2021
+logo: /assets/img/_frames_-16.png
